package com.twopizzas.domain.flight;

public enum SeatClass {
    FIRST, BUSINESS, ECONOMY,
}
